# unsw_courses

./: .gitignore
cs1511/: advanced_addition.c  array_sum_prod.c  minesweeper  minesweeper.c  minesweeper_docs.txt  minesweeper_ext.c  swap_pointers.c
cs1511/21T2_exam/: exam_mc.txt  exam_q1.c  exam_q2.c  exam_q3.c  exam_q4.c  exam_q5  exam_q5.c  exam_q6.c  exam_q7.c
cs1511/ass2/: pokedex  pokedex.c
cs1521/chicken/: autotest.txt  backup.txt  chicken  chicken.c  chicken.c.backup  chicken_test  compile_tests.sh  pseudocode.txt  tests.c
cs1521/chicken-old/: chicken  chicken-old.c  pseudocode.txt
cs1521/exam_21t2final/: 21t2final_q0.c  21t2final_q0.mk  21t2final_q0_main.c  21t2final_q1.c  21t2final_q1.mk  21t2final_q1_main.c  21t2final_q2.c  21t2final_q2.s  21t2final_q3.c  21t2final_q3.mk  21t2final_q3_main.c  21t2final_q4.c  21t2final_q4.mk  21t2final_q4_main.c  21t2final_q5.c  21t2final_q5.mk  21t2final_q5_main.c  21t2final_q6.c  21t2final_q6.mk  21t2final_q6_main.c  21t2final_q7  21t2final_q7.c  21t2final_q7.mk  21t2final_q7_main.c  21t2final_q8.c  21t2final_q8.h  21t2final_q8.mk  21t2final_q8_main.c  21t2final_q8_opcodes.h  21t2final_q9.c  hello.dump  hello.dump.shuf  tina_arena.dump  tina_arena.dump.shuf  utf8_file.txt
cs1521/exam_final/: final_q1.c  final_q2.s  final_q3.s  final_q4.s  final_q5.c  final_q6.c  final_q7.c  final_q8  final_q8.c  final_q9.s
cs1521/lab01/: no_uppercase.c  no_uppercase_old.c  no_vowels.c
cs2041/test04/: a.c  (+6 more)
cs6991/exam_final/exam_q2/: Cargo.toml
cs6991/exam_final/exam_q2/src/: lib.rs  main.rs
cs9444/: slides_1_flashcards.csv
(+437 files in other folders)
